[package]
name = "irondb"
version = "0.1.0"
edition = "2021"

[lib]
name = "irondb"
path = "src/lib.rs"

[[bin]]
name = "irondb-server"
path = "src/server.rs"

[[bin]] 
name = "irondb-client"
path = "src/client.rs"

[dependencies]
im = "15.0.0"
log = "0.4"
config = "0.11"
clap = "2.34.0"
tonic = "0.6"
prost = "0.9"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }

[build-dependencies]
tonic-build = "0.6"
